[package]
name = "sci-fi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
path = "src/demo/main.rs" 

[[bin]]
name = "game"
path = "src/game/main.rs"

[dependencies]
rltk = "0.8.7"
specs = "0.18.0"
specs-derive = "0.4.1"
noise = { version = "0.8.2", features = ["images"] }
splines = "4.2.0"
rand = "0.8.5"
